@@ -50,6 +50,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * ChannelFactory
@@ -941,7 +942,7 @@ public class ChannelFactory extends HibernateFactory {
                 .stream()
                 .map(Arrays::asList)
                 .map(r -> new SsmChannelDto((long)r.get(0), (String)r.get(1), r.get(2) != null))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
