@@ -81,6 +81,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * SystemConfigHandlerTest
@@ -224,7 +225,7 @@ public class ServerConfigHandlerTest extends BaseHandlerTestCase {
 
         List<ConfigChannel> channels = List.of(gcc1, gcc2);
 
-        List<String> channelLabels = channels.stream().map(ConfigChannel::getLabel).toList();
+        List<String> channelLabels = channels.stream().map(ConfigChannel::getLabel).collect(Collectors.toList());
 
         //test set channels
         handler.setChannels(admin, serverIds, channelLabels);
@@ -273,7 +274,7 @@ public class ServerConfigHandlerTest extends BaseHandlerTestCase {
         List<ConfigChannel> channels = List.of(gcc1, gcc2);
         List<String> channelLabels = channels.stream()
                 .map(ConfigChannel::getLabel)
-                .toList();
+                .collect(Collectors.toList());
 
         srv1.setConfigChannels(channels, regular);
 
