@@ -38,6 +38,7 @@ import org.apache.http.HttpStatus;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import spark.Request;
@@ -128,7 +129,7 @@ public class LivePatchingApiController {
         String query = StringUtils.defaultString(req.queryParams("q"));
         List<System> slesSystems = ServerFactory.querySlesSystems(query, 20, user)
                 .map(System::new)
-                .toList();
+                .collect(Collectors.toList());
 
         return result(res, ResultJson.success(slesSystems), new TypeToken<>() { });
     }
