@@ -50,6 +50,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 
 /**
@@ -91,7 +92,7 @@ public class ResponseMappers {
                     historyEntryResponse.setVersion(entry.getVersion());
                     return historyEntryResponse;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         properties.setHistoryEntries(historyEntries);
         return properties;
@@ -121,7 +122,7 @@ public class ResponseMappers {
                             .getOrDefault(sourceDb.getChannel().getId(), null));
                     return projectSourceResponse;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -155,7 +156,7 @@ public class ResponseMappers {
                     );
                     return environmentResponse;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -177,7 +178,7 @@ public class ResponseMappers {
                 projectDB.getSources()
                         .stream()
                         .flatMap(source -> stream(source.asSoftwareSource()))
-                        .toList(),
+                        .collect(Collectors.toList()),
                 swSourcesWithUnsyncedPatches, sourceTagetChannelIds
         ));
         project.setFilters(mapProjectFilterFromDB(projectDB.getProjectFilters()));
@@ -208,11 +209,11 @@ public class ResponseMappers {
                     contentProjectResumeResponse.setEnvironments(
                             environments.stream()
                                     .map(ContentEnvironment::getName)
-                                    .toList()
+                                    .collect(Collectors.toList())
                     );
                     return contentProjectResumeResponse;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -239,12 +240,12 @@ public class ResponseMappers {
                     contentFilterResponse.setProjects(
                             projects.stream()
                                     .map(p -> new ImmutablePair<>(p.getLabel(), p.getName()))
-                                    .toList()
+                                    .collect(Collectors.toList())
                     );
                     return contentFilterResponse;
                 })
                 .sorted(Comparator.comparing(FilterResponse::getName))
-                .toList();
+                .collect(Collectors.toList());
     }
 
 
@@ -270,7 +271,7 @@ public class ResponseMappers {
                     contentProjectFilterResponse.setState(projectFilter.getState().toString());
                     return contentProjectFilterResponse;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -282,6 +283,6 @@ public class ResponseMappers {
     public static List<ProjectMessageResponse> mapProjectMessagesFromDB(List<ContentValidationMessage> messages) {
         return messages.stream()
                 .map(m -> new ProjectMessageResponse(m.getMessage(), m.getType(), m.getEntity()))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
