@@ -55,6 +55,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import de.neuland.jade4j.JadeConfiguration;
 import spark.ModelAndView;
@@ -238,7 +239,7 @@ public class SparkApplicationHelper {
             ModelAndView modelAndView = route.handle(request, response, user);
             List<String> roles = user.getRoles().stream()
                     .map(Role::getLabel)
-                    .toList();
+                    .collect(Collectors.toList());
             Object model = modelAndView.getModel();
             if (model instanceof Map mod) {
                 mod.put("roles", GSON.toJson(roles));
